# loess

./: instructions.md
dloess/: CMakeLists.txt  ReadMe.md
dloess/src/: S.h  air.c  ethanol.c  galaxy.c  gas.c  loess.c  loess.h  loessc.c  loessc.h  loessf.f  loessf.h  madeup.c  misc.c  predict.c
dloess2/src/: gas.c  loess.c  loess.m  loessc.c  loessf.f  predict.m  supp.f
